--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -17,13 +17,8 @@ jobs:
           java-package: jre
           architecture: x64
      
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v2.1.2
-        with:
-          check-latest: true
-
-      - name: Install ajv JSON schema validator
-        run: npm i -g ajv-cli@latest
+      - name: Setup Node.js environment and install ajv-cli
+        run: apt-get update && apt-get install node-ajv
       
       - name: Checkout repository
         uses: actions/checkout@v2
