--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -10,6 +10,9 @@ jobs:
   validate:
     runs-on: ubuntu-latest
     steps:
+      - name: Cancel Workflow Action
+        uses: styfle/cancel-workflow-action@0.5.0
+        
       - name: Setup Java JRE
         uses: actions/setup-java@v1.4.3
         with:
